<resources>
    <string name="app_name">Smart Dermatologist</string>


    <!-- String Array For Gender Names!-->
    <string-array name="gender_values">
        <item>Select Gender</item>
        <item> Male </item>
        <item> Female </item>
    </string-array>

    <!-- String Array For Feedback Types!-->
    <string-array name="feedback_types">
        <item>Select Feedback Type</item>
        <item> Suggestion </item>
        <item> Bug </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Drawer Open And drawer Close !-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


     <string name="user_table_firstName">First Name</string>
     <string name="user_table_lastName">Last Name</string>
     <string name="user_table_gender">Gender</string>
     <string name="user_table_email">Email</string>
    <string name="user_table_age">Age</string>
</resources>
