<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/activity_user_detail_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appBarUserDetail"
        layout="@layout/appbar"
        />

<android.support.v7.widget.CardView
    android:layout_marginTop="10dp"
    android:layout_width="120dp"
    app:cardCornerRadius="20dp"
    android:layout_gravity="center"
    android:background="@drawable/user_profile_circle"
    android:layout_height="120dp">
    <ImageView
        android:layout_gravity="center"
        android:layout_height="120dp"
        android:layout_width="match_parent"
        android:id="@+id/imageView1"
        android:src="@drawable/male_user_icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
    </ImageView>
</android.support.v7.widget.CardView>

<TableLayout
    android:padding="15dp"
    android:orientation="vertical"
    android:background="@drawable/rectangle_shape"
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_shape"
        android:padding="5dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        >
    <TextView
        android:padding="2.5dp"
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/user_table_firstName"
        />
    <TextView
        android:id="@+id/userFirstName"
        android:padding="2.5dp"
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/user_table_lastName"
        />
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_shape"
        android:padding="5dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        >
        <TextView
            android:padding="2.5dp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_table_lastName"
            />
        <TextView
            android:id="@+id/userLastName"
            android:padding="2.5dp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_table_lastName"
            />
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_shape"
        android:padding="5dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        >
        <TextView
            android:padding="2.5dp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_table_age"
            />
        <TextView
            android:id="@+id/userAge"
            android:padding="2.5dp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_table_age"
            />
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_shape"
        android:padding="5dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        >
        <TextView
            android:padding="2.5dp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_table_gender"
            />
        <TextView
            android:id="@+id/userGender"
            android:padding="2.5dp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_table_gender"
            />
    </TableRow>
    <TableRow
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_shape"
        android:layout_gravity="center_vertical"
        android:padding="5dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        >
        <TextView
            android:padding="2.5dp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_table_email"
            />
        <TextView
            android:id="@+id/userEmail"
            android:padding="2.5dp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/user_table_email"
            />
    </TableRow>
</TableLayout>
</LinearLayout>
